<resources>
    <string name="app_name">SharkFeed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_sharks">Search</string>
    <string name="clear_search">Clear</string>
    <string name="download_image">Download</string>
    <string name="open_in_flickr">Open in App</string>
    <string name="sharkFeedTransition">Shark Feed Transition</string>
    <string name="start_polling">Start Polling</string>
    <string name="stop_polling">Stop Polling</string>
    <string name="new_pictures_title">New SharkFeed Pictures</string>
    <string name="new_pictures_text">You have new shark pictures waiting for you in SharkFeed</string>

    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="tap_to_start">Tap to start feeding</string>
    <string name="photo_info_title">Photo Info</string>
    <string name="photo_title">Title: </string>
    <string name="photo_desc_str">Description:</string>
    <string name="photo_date_created_str">Date posted:</string>
    <string name="photo_view_str">Number of views:</string>
    <string name="photo_owner_str">Owner:</string>
    <string name="info_not_available">Info not available</string>
    <string name="please_wait">Please wait for the image to load</string>
    <string name="image_downloaded">Image downloaded into Pictures</string>
    <string name="view_pictures">VIEW</string>
    <string name="no_internet_connection">No network. Please try later</string>
    <string name="dismiss">DISMISS</string>
    <string name="click_on_info_btn">Click on info for more information</string>
</resources>
