<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/light_box_fragment_frame_layout"
             tools:context="com.android.yahoo.sharkfeed.fragment.LightBoxFragment">


    <ImageView
        android:id="@+id/high_quality_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:scaleType="fitCenter"
        android:transitionName="@string/sharkFeedTransition"
        app:srcCompat="@drawable/img_placeholder_shark"/>

        <ImageView
            android:id="@+id/photo_info_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:padding="8dp"
            android:visibility="gone"
            android:layout_marginEnd="16dp"
            android:layout_gravity="end"
            app:srcCompat="@drawable/ic_info_outline_white_24dp"
            />

    <LinearLayout
        android:id="@+id/photo_options_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/image_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Image title or description"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="4dp"
                android:background="#ffffff"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/download_image_button"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="0.5"
                android:drawableStart="@drawable/ic_download_image"
                android:padding="8dp"
                android:text="@string/download_image"
                android:textAlignment="textStart"
                android:textColor="#ffffff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <Button
                android:id="@+id/open_flickr_page_button"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="0.5"
                android:drawableStart="@drawable/ic_open_in_flickr"
                android:padding="8dp"
                android:text="@string/open_in_flickr"
                android:textAlignment="textStart"
                android:textColor="#ffffff"
                />

        </LinearLayout>
    </LinearLayout>


    <ProgressBar
        android:id="@+id/light_box_image_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="4dp"
        android:visibility="gone"
        />
</FrameLayout>
